Добавил поиск транзакций по дате