@@ -10,7 +10,7 @@ public enum CategoryEnum {
     FOOD, HEALTH, TRANSPORT,GIFTS,CAFE,EDUCATION,CLOTHES,SPORTS,TRANSFER, OTHERS;
 
     private static final List<CategoryEnum> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+            List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
